--- a/.github/workflows/ruby-ci.yml
+++ b/.github/workflows/ruby-ci.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['2.6', '2.7', '3.0', '3.1']
+        ruby-version: ['1.9, '2.0', '2.3', '2.6', '2.7', '3.0', '3.1']
 
     steps:
     - uses: actions/checkout@v3
